# hexlet-git

python-project-52/: README.md  github_key  github_key.pub  pyproject.toml  requirements.txt  setup.cfg
python-project-52/.github/workflows/: django.yml
python-project-52/fixtures/: labels.json  statuses.json  tasks.json  test_label1.json  test_status1.json  test_task1.json  test_user.json  users.json
python-project-52/labels/: forms.py  tests.py  urls.py  views.py
python-project-52/labels/migrations/: 0001_initial.py  0002_alter_label_name.py
python-project-52/statuses/: forms.py  tests.py  urls.py  views.py
python-project-52/statuses/migrations/: 0001_initial.py  0002_alter_status_name.py
python-project-52/task_manager/: dataclasses.py  mixin.py  settings.py  urls.py
python-project-52/tasks/: filters.py  forms.py  tests.py  urls.py  views.py
python-project-52/tasks/migrations/: 0001_initial.py  0002_rename_label_relations_labels.py  0003_alter_task_description_alter_task_executor_and_more.py
python-project-52/templates/: base.html
python-project-52/templates/labels/: create.html  delete.html  index.html  update.html
python-project-52/templates/statuses/: create.html  delete.html  index.html  update.html
python-project-52/templates/task_manager/: index.html  login.html  logout.html
python-project-52/templates/tasks/: create.html  delete.html  index.html  task.html  update.html
python-project-52/templates/users/: create.html  delete.html  update.html  users.html
python-project-52/users/: forms.py  tests.py  urls.py  views.py
(+7 files in other folders)
